일라스틱 서치 추가 - 1. Settlement, Order, Payment, Refund 데이터를 통합해서 검색할 수 있음(SettlementSearchDocument를) 2. 정산 ID, 주문 정보, 결제 금액, 환불 상태, 정산일 등을 필드로 포함 3. 이벤트 기반 동기화(PostgreSQL에 저장되는 정산 데이터가 Elasticsearch에도 실시간으로 반영) 4. 실제 관리자가 사용할 강력한 검색 기능(SettlementSearchService를)

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,4 +1,7 @@
 spring:
+  profiles:
+    active: local
+
   application:
     name: lemuel
 
@@ -25,6 +28,18 @@ spring:
     default-schema: opslab
     create-schemas: true
 
+  data:
+    elasticsearch:
+      repositories:
+        enabled: false
+
+  elasticsearch:
+    uris: https://5d37123531be45ad8e84d19cca735fb5.us-central1.gcp.cloud.es.io
+    username: ${ELASTICSEARCH_USER}
+    password: ${ELASTICSEARCH_PASSWORD}
+    connection-timeout: 5s
+    socket-timeout: 60s
+
 
 management:
   endpoints:
@@ -35,6 +50,9 @@ management:
     health:
       show-details: always
       show-components: always
+  health:
+    elasticsearch:
+      enabled: false
   metrics:
     distribution:
       percentiles-histogram:
@@ -59,6 +77,8 @@ springdoc:
 
 
 app:
+  search:
+    enabled: false
   jwt:
     issuer: ${JWT_ISSUER}
     secret: ${JWT_SECRET}
