--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,88 +1,88 @@
-name: Build and Push Docker Image
-
-on:
-  push:
-    branches:
-      - master
-      - main
-      - develop
-  pull_request:
-    branches:
-      - master
-      - main
-
-env:
-  REGISTRY: ghcr.io
-  IMAGE_NAME: ${{ github.repository }}
-
-jobs:
-  build-and-push:
-    runs-on: ubuntu-latest
-    permissions:
-      contents: read
-      packages: write
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Set up JDK 21
-        uses: actions/setup-java@v4
-        with:
-          java-version: '21'
-          distribution: 'temurin'
-          cache: 'gradle'
-
-      - name: Grant execute permission for gradlew
-        run: chmod +x gradlew
-
-      - name: Run tests
-        run: ./gradlew test --no-daemon
-
-      - name: Build with Gradle
-        run: ./gradlew bootJar --no-daemon
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-
-#      - name: Log in to GitHub Container Registry
-#        uses: docker/login-action@v3
+#name: Build and Push Docker Image
+#
+#on:
+#  push:
+#    branches:
+#      - master
+#      - main
+#      - develop
+#  pull_request:
+#    branches:
+#      - master
+#      - main
+#
+#env:
+#  REGISTRY: ghcr.io
+#  IMAGE_NAME: ${{ github.repository }}
+#
+#jobs:
+#  build-and-push:
+#    runs-on: ubuntu-latest
+#    permissions:
+#      contents: read
+#      packages: write
+#
+#    steps:
+#      - name: Checkout code
+#        uses: actions/checkout@v4
+#
+#      - name: Set up JDK 21
+#        uses: actions/setup-java@v4
 #        with:
-#          registry: ${{ env.REGISTRY }}
-#          username: ${{ github.actor }}
-#          password: ${{ secrets.GITHUB_TOKEN }}
-
-      # Alternative: Docker Hub Login (uncomment if using Docker Hub)
-      # - name: Log in to Docker Hub
-      #   uses: docker/login-action@v3
-      #   with:
-      #     username: ${{ secrets.DOCKERHUB_USERNAME }}
-      #     password: ${{ secrets.DOCKERHUB_TOKEN }}
-
-      - name: Extract metadata for Docker
-        id: meta
-        uses: docker/metadata-action@v5
-        with:
-          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
-          tags: |
-            type=ref,event=branch
-            type=ref,event=pr
-            type=semver,pattern={{version}}
-            type=semver,pattern={{major}}.{{minor}}
-            type=sha,prefix={{branch}}-
-            type=raw,value=latest,enable={{is_default_branch}}
-
-      - name: Build and push Docker image
-        uses: docker/build-push-action@v5
-        with:
-          context: .
-          file: ./Dockerfile
-          push: ${{ github.event_name != 'pull_request' }}
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
-          platforms: linux/amd64
-
-      - name: Image digest
-        run: echo ${{ steps.meta.outputs.digest }}
+#          java-version: '21'
+#          distribution: 'temurin'
+#          cache: 'gradle'
+#
+#      - name: Grant execute permission for gradlew
+#        run: chmod +x gradlew
+#
+#      - name: Run tests
+#        run: ./gradlew test --no-daemon
+#
+#      - name: Build with Gradle
+#        run: ./gradlew bootJar --no-daemon
+#
+#      - name: Set up Docker Buildx
+#        uses: docker/setup-buildx-action@v3
+#
+##      - name: Log in to GitHub Container Registry
+##        uses: docker/login-action@v3
+##        with:
+##          registry: ${{ env.REGISTRY }}
+##          username: ${{ github.actor }}
+##          password: ${{ secrets.GITHUB_TOKEN }}
+#
+#      # Alternative: Docker Hub Login (uncomment if using Docker Hub)
+#      # - name: Log in to Docker Hub
+#      #   uses: docker/login-action@v3
+#      #   with:
+#      #     username: ${{ secrets.DOCKERHUB_USERNAME }}
+#      #     password: ${{ secrets.DOCKERHUB_TOKEN }}
+#
+#      - name: Extract metadata for Docker
+#        id: meta
+#        uses: docker/metadata-action@v5
+#        with:
+#          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+#          tags: |
+#            type=ref,event=branch
+#            type=ref,event=pr
+#            type=semver,pattern={{version}}
+#            type=semver,pattern={{major}}.{{minor}}
+#            type=sha,prefix={{branch}}-
+#            type=raw,value=latest,enable={{is_default_branch}}
+#
+#      - name: Build and push Docker image
+#        uses: docker/build-push-action@v5
+#        with:
+#          context: .
+#          file: ./Dockerfile
+#          push: ${{ github.event_name != 'pull_request' }}
+#          tags: ${{ steps.meta.outputs.tags }}
+#          labels: ${{ steps.meta.outputs.labels }}
+#          cache-from: type=gha
+#          cache-to: type=gha,mode=max
+#          platforms: linux/amd64
+#
+#      - name: Image digest
+#        run: echo ${{ steps.meta.outputs.digest }}
