1. 슬랙 웹훅 추가 2. runbook url 추가 3. 도커컴포즈 변경

--- a/monitoring/.env.example
+++ b/monitoring/.env.example
@@ -7,12 +7,12 @@ JWT_ISSUER=
 JWT_SECRET=
 
 # Slack Alerting
-SLACK_WEBHOOK_URL=https://hooks.slack.com/services/
-SLACK_CHANNEL=#alerts
-SLACK_ALERTS_ENABLED=true
+SLACK_WEBHOOK_URL=
+SLACK_CHANNEL=
+SLACK_ALERTS_ENABLED=
 
 # Grafana
 GRAFANA_ADMIN_PASSWORD=
 
 # Environment
-ENVIRONMENT=production
+ENVIRONMENT=
