1. react 빌드 에러 수정 2. 메일 송신 수정

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -7,8 +7,9 @@ WORKDIR /app
 # Copy package files
 COPY package*.json ./
 
-# Install dependencies
-RUN npm ci --only=production
+# Install ALL dependencies including devDependencies (typescript, vite, etc.)
+# Builder stage needs devDependencies to run `tsc && vite build`
+RUN npm ci
 
 # Copy source code
 COPY . .
