--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -182,14 +182,11 @@ jobs:
           cache-to: type=gha,mode=max
           platforms: linux/amd64
 
-  frontend-ghcr:
-    name: Frontend - Build & Push to GHCR
+  frontend-ci:
+    name: Frontend - TypeCheck & Lint
     runs-on: ubuntu-latest
     needs: changes
-    if: github.event_name != 'pull_request' && needs.changes.outputs.frontend == 'true'
-    permissions:
-      contents: read
-      packages: write
+    if: needs.changes.outputs.frontend == 'true'
     steps:
       - uses: actions/checkout@v4
 
@@ -204,11 +201,24 @@ jobs:
         working-directory: frontend
         run: npm ci
 
-      - name: Build frontend
+      - name: TypeScript type check
         working-directory: frontend
-        run: npm run build
-        env:
-          VITE_API_BASE_URL: /api
+        run: npm run typecheck
+
+      - name: ESLint check
+        working-directory: frontend
+        run: npm run lint
+
+  frontend-ghcr:
+    name: Frontend - Build & Push to GHCR
+    runs-on: ubuntu-latest
+    needs: [changes, frontend-ci]
+    if: github.event_name != 'pull_request' && needs.changes.outputs.frontend == 'true'
+    permissions:
+      contents: read
+      packages: write
+    steps:
+      - uses: actions/checkout@v4
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
