1. 상품 카테고리 생성 2. 태그 관리

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -198,7 +198,7 @@ jobs:
           platforms: linux/amd64
 
   frontend-ci:
-    name: Frontend - TypeCheck & Lint
+    name: Frontend - Production Build & Quality
     runs-on: ubuntu-latest
     needs: changes
     if: needs.changes.outputs.frontend == 'true'
@@ -219,13 +219,27 @@ jobs:
         working-directory: frontend
         run: npm ci
 
-      - name: TypeScript type check
+      # Production typecheck (excludes test files)
+      - name: TypeScript type check (production code only)
         working-directory: frontend
         run: npm run typecheck
 
       - name: ESLint check
         working-directory: frontend
         run: npm run lint
+        continue-on-error: true
+
+      # Build production bundle
+      - name: Build production bundle
+        working-directory: frontend
+        run: npm run build
+
+      - name: Upload build artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: frontend-dist
+          path: frontend/dist
+          retention-days: 7
 
       - name: Run Snyk Security Scan (Frontend)
         uses: snyk/actions/node@master
@@ -240,6 +254,39 @@ jobs:
         if: always() && hashFiles('snyk.sarif') != ''
         with:
           sarif_file: snyk.sarif
+
+  # Optional: Separate test job (disabled by default)
+  frontend-tests:
+    name: Frontend - Tests (Optional)
+    runs-on: ubuntu-latest
+    needs: changes
+    # Only run if explicitly triggered or if RUN_TESTS env var is set
+    if: false  # Change to 'needs.changes.outputs.frontend == true' to enable
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: "20"
+          cache: npm
+          cache-dependency-path: frontend/package-lock.json
+
+      - name: Install dependencies
+        working-directory: frontend
+        run: npm ci
+
+      - name: Run tests
+        working-directory: frontend
+        run: npm run test:run
+
+      - name: Upload test coverage
+        uses: actions/upload-artifact@v4
+        if: always()
+        with:
+          name: frontend-test-coverage
+          path: frontend/coverage
+          retention-days: 30
 
   frontend-ghcr:
     name: Frontend - Build & Push to GHCR
