1. 주문하기와 주문 상품 분리

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -156,4 +156,8 @@ app:
     token-expiry-minutes: 30
     base-url: ${APP_BASE_URL:http://localhost:5173}
 
+toss:
+  secret-key: ${TOSS_SECRET_KEY:test_sk_zXLkKEypNArWmo50nX3lmeaxYG5R}
+  api-url: https://api.tosspayments.com/v1/payments/confirm
+
 
