--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,2 +1,5 @@
 # API Base URL
 VITE_API_BASE_URL=http://localhost:8080
+
+# 토스페이먼츠 테스트 클라이언트 키
+VITE_TOSS_CLIENT_KEY=test_ck_D5GePWvyJnrK0W0k6q8gLzN97Eoq
