1. 장바구니 기능 및 결제기능 2. 마이페이지의 주문내역 보기 기능 3. 마이페이지 사용자정보 보기 기능 4. 관리자, ADMIN 로그인 기능추가 5. 상품 리뷰와 평점 시스템

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -98,6 +98,13 @@ jobs:
           SPRING_DATASOURCE_PASSWORD: testpass
           SPRING_ELASTICSEARCH_URIS: http://localhost:9200
 
+      - name: Flyway Validate
+        run: ./gradlew flywayValidate
+        env:
+          SPRING_DATASOURCE_URL: jdbc:postgresql://localhost:5432/testdb
+          SPRING_DATASOURCE_USERNAME: testuser
+          SPRING_DATASOURCE_PASSWORD: testpass
+
       - name: Upload test/coverage reports
         uses: actions/upload-artifact@v4
         if: always()
